# ocilib

./: .gitattributes  .gitignore  .travis.yml  404.md  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.txt  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.MD  README.in  Rakefile  Readme.txt  THANKS  Thanks.txt  _config.yml  aclocal.m4  acocilib.m4  atom.xml  config.h.cmakein  config.h.in  configure  configure.ac  index.html  index.markdown  ocilib-changelog-v3.1.0.txt  ocilib-changelog-v3.2.0.txt  ocilib-changelog-v3.3.0.txt  ocilib-changelog-v3.4.0.txt  ocilib-changelog-v3.4.1.txt  ocilib-changelog-v3.5.0.txt  ocilib-changelog-v3.5.1.txt  ocilib-changelog-v3.6.0.txt  ocilib-changelog-v3.7.0.txt  ocilib-changelog-v3.8.0.txt  ocilib-changelog-v3.8.1.txt  (+5 more)
_data/: nav.yml  socials.yml
_includes/: footer.html  head.html  header.html  metadata.html  navigation.html
_layouts/: default.html  page.html  post.html
_plugins/: image_optim.rb
_posts/: 2008-07-18-calling-stored-procedure-with-ocilib.markdown  2008-07-18-ocilib_new_blog.markdown  2008-07-21-new_ocilib_release_2_5_0.markdown  2008-07-23-humm-today-must-be-a-bad-day.markdown  2008-07-24-ocilib-251-patch-now-available.markdown  2008-08-06-calling-plsql-procedures-with-plsql-tables-parameters.markdown  2008-08-09-ocilib-next-release-features.markdown  2008-08-15-plsql-tables-in-parameters-bug-reported.markdown  2008-09-01-ocilib-next-release-version-300.markdown  2008-09-15-ocilib-new-logo.markdown  2008-09-28-ocilib-v300-on-the-way.markdown  2008-10-05-ocilib-commonly-used-as-oracle-driver-in-generic-database-layers.markdown  2008-10-08-ocilib-name-update.markdown  2008-10-13-ocilib-v300-available.markdown  2008-10-17-ocilib-v301-available.markdown  2008-10-20-ocilib-subversion-repository-available.markdown  2008-10-23-ocilib-svn-repository-updated.markdown  2008-10-30-ocilib-svn-repository-has-been-updated-2008-10-29.markdown  2008-12-09-ocilib-svn-repository-has-been-updated-2008-12-09.markdown  2009-01-23-ocilib-v310-coming-on-january-monday-26th.markdown  2009-01-26-ocilib-v310-now-available-for-download.markdown  2009-02-12-ome-considerations-on-cross-database-abstraction-c-layers.markdown  2009-03-17-ocilib-320-available-soon.markdown  2009-04-10-ocilib-svn-repository-has-been-updated-2009-04-10.markdown  2009-04-20-ocilib-v320-now-available-for-download.markdown  2009-06-10-ocilib-svn-repository-has-been-updated-2009-06-10.markdown  2009-06-23-ocilib-svn-repository-has-been-updated-2009-06-23.markdown  2009-07-06-ocilib-v330-now-available-for-download.markdown  2009-07-27-support-for-11g-remote-instance-management-in-ocilib-v340.markdown  2009-07-27-working-with-oracle-spatial-types.markdown  2009-07-31-ocilib-v340-now-available-for-download.markdown  2009-11-20-ocilib-v341-coming-on-november-monday-23th.markdown  2009-12-10-support-for-database-change-notifications-dcncqn-in-v350.markdown  2009-12-17-ocilib-v350-christmas-release-monday-21th.markdown  2009-12-21-ocilib-v350-now-available-for-download.markdown  2009-12-23-do-you-need-a-c-c-plsql-oracle-developer.markdown  2010-01-12-the-ocilib-user-guide-is-available-for-download.markdown  2010-02-03-ocilib-v351-now-available-for-download.markdown  2010-02-18-icinga-chose-ocilib-as-oracle-db-layer.markdown  2010-03-04-ocilib-v360-coming-on-march-monday-8th.markdown  (+65 more)
_sass/: _base.scss  _layout.scss  _navigation.scss  _variables.scss
_site/: 404.html  atom.xml  index.html  sitemap.xml
about/: index.markdown
blog/: index.markdown
changelogs/: index.markdown  ocilib-changelog-v1.1.0.txt  ocilib-changelog-v1.3.0.txt  ocilib-changelog-v1.4.0.txt  ocilib-changelog-v1.5.4.txt  ocilib-changelog-v2.1.0.txt  ocilib-changelog-v2.5.1.txt  ocilib-changelog-v3.0.0.txt  ocilib-changelog-v3.0.1.txt  ocilib-changelog-v3.10.0.txt  ocilib-changelog-v3.11.1.txt  ocilib-changelog-v3.12.0.txt  ocilib-changelog-v3.2.0.txt  ocilib-changelog-v3.3.0.txt  ocilib-changelog-v3.5.0.txt  ocilib-changelog-v3.6.0.txt  ocilib-changelog-v3.7.0.txt  ocilib-changelog-v3.8.0.txt  ocilib-changelog-v3.8.1.txt  ocilib-changelog-v3.9.0.txt  ocilib-changelog-v3.9.2.txt  ocilib-changelog-v3.9.4.txt  ocilib-changelog-v4.1.0.txt  ocilib-changelog-v4.2.0.txt  ocilib-changelog-v4.2.1.txt  ocilib-changelog-v4.3.0.txt  ocilib-changelog-v4.3.1.txt  ocilib-changelog-v4.3.2.txt  ocilib-changelog-v4.3.3.txt  ocilib-changelog-v4.4.0.txt  (+17 more)
demo/: Makefile.am  Makefile.in  Makefile_demo  Makefile_demo.in  Makefile_demo_cpp.in  abort.c  abort.cpp  array.c  array.cpp  array_internal.c  bind.c  bind.cpp  coll.c  coll.cpp  collections.sql  conn.c  cursor.c  cursor.cpp  date.c  date.cpp  dates.sql  desc.c  desc.cpp  dirpath.c  dirpath.sql  dirpath_complete.c  err.c  err_ctx.c  err_warning.c  exec.c  fetch.c  fetch.cpp  fetch_struct.c  file.c  file.sql  format.c  geometry.c  geometry.cpp  geometry.sql  hash.c  (+45 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  agent.c  agent.h  array.c  array.h  bind.c  bind.h  callback.c  callback.h  checks.h  collection.c  collection.h  column.c  column.h  connection.c  connection.h  connpool.c  database.c  database.h  date.c  date.h  define.c  define.h  defs.h  dequeue.c  dequeue.h  dirpath.c  dirpath.h  dirpath_save.c  element.c  element.h  enqueue.c  enqueue.h  environment.c  environment.h  error.c  error.h  event.c  (+87 more)
src/oci/: api.h  defs.h  types.h
tests/: Array.cpp  Makefile.am  Makefile.in  Makefile_tests.in  ReportedIssues.cpp  TestArray.cpp  TestCollection.cpp  TestConnection.cpp  TestCursor.cpp  TestDate.cpp  TestDescribe.cpp  TestDirectPath.cpp  TestEnvironment.cpp  TestImplicitResultset.cpp  TestLob.cpp  TestLong.cpp  TestNotifications.cpp  TestNumber.cpp  TestObject.cpp  TestObjectInheritance.cpp  TestPlSqlTables.cpp  TestPool.cpp  TestQueue.cpp  TestREportedIssuesCppApi.cpp  TestReference.cpp  TestReportedIssues.cpp  TestReportedIssuesCApi.cpp  TestReturningInto.cpp  TestRowId.cpp  TestScrollabeCursor.cpp  TestThread.cpp  TestThreadKey.cpp  TestTimestamp.cpp  TestVector.cpp  TestXmlType.cpp  Testinterval.cpp  connection.cpp  date.cpp  interval.cpp  lob.cpp  (+8 more)
(+1003 files in other folders)
