# Copyright (C) 2007 Vincent Rogier <vince_rogier@yahoo.fr>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AUTOMAKE_OPTIONS = foreign 
SUBDIRS = .
CLEANFILES = *~

demo_DATA = @OCILIB_DEMO_SOURCES@ Makefile_demo
demodir = $(prefix)/share/doc/$(PACKAGE)/demo

EXTRA_DIST = $(demo_DATA)

