# Copyright (c) 2007-2021 Vincent ROGIER <vince.rogier@ocilib.net>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AUTOMAKE_OPTIONS = foreign 
SUBDIRS = .
CLEANFILES = *~

tests_DATA = @OCILIB_TESTS@ Makefile_tests
testsdir = $(prefix)/share/doc/$(PACKAGE)/tests
EXTRA_DIST = $(tests_DATA)
